Fixed left placeholder spacing

--- a/src/styles/base-styles.scss
+++ b/src/styles/base-styles.scss
@@ -142,6 +142,7 @@ h1 {
   svg {
     max-width: 100%;
     opacity: 1;
+    margin-left: 3rem;
     margin-right: 2.5rem;
     animation: fadeIn 0.6s ease-in-out 1;
   }
